documentation cleanup
